[package]
name = "linux-shmipc-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.107"
sendfd = "0.4.0"

[[bin]]
name = "posix-send"
path = "bin/posix_send.rs"

[[bin]]
name = "posix-recv"
path = "bin/posix_recv.rs"

[[bin]]
name = "memfd-recv"
path = "bin/memfd_recv.rs"

[[bin]]
name = "memfd-send"
path = "bin/memfd_send.rs"