[package]
name = "warp-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
warp = "0.3.5"

handle-errors = { path = "handle-errors" }
uuid = { version = "1.4.0", features = ["v4"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres"] }
config = { version = "0.13.3", features = ["toml"] }
